syntax = "proto3";
package service.login;

message ClientInfo {
  string username = 1;
  string password = 2;
}